# pp

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES  swift
data/debian/: postinst
data/ibus/: predictable-pinyin.xml.in
data/macos/: Info.plist.in  PredictablePinyin.icns  default.yaml  stroke.schema.yaml  symbols.yaml
data/raw/: pinyin_simp.prism.txt
doc/: README.md  character-database.md  dev-setup-ibus.md  dev-setup-macos.md  human-review.md  input-flow.md  phase-8-ibus-linux-plan.md  phase-8-macos-plan.md  plan.md  rime-framework.md  stroke-data.md  word-input-plan.md
rime/: predictable_pinyin.schema.yaml
scripts/: build-deb.sh  build-dmg.sh  build-icns.sh  build.sh  download-data.sh  install-ibus-deb.sh  install-ibus.sh  install-macos.sh  pubspec.yaml  uninstall-ibus.sh  uninstall-macos.sh
src/: README.md  frequency_sorter.cc  frequency_sorter.h  ibus_plugin.cc  macos_plugin.mm  main.cc  pinyin_trie.cc  pinyin_trie.h  predictable_state_machine.cc  predictable_state_machine.h  rime_session.cc  rime_session.h  stroke_filter.cc  stroke_filter.h
tests/: frequency_sorter_test.cc  integration_test.cc  pinyin_trie_test.cc  predictable_state_machine_test.cc  stroke_filter_test.cc  test_support.h
